--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,13 @@
                     <span class="slider round"></span>
                 </label>
             </div>
+            <div class="setting-row">
+                <label for="fast-mode-toggle" class="setting-label">Fast Mode</label>
+                <label class="switch">
+                    <input type="checkbox" id="fast-mode-toggle">
+                    <span class="slider round"></span>
+                </label>
+            </div>
         </div>
         <div class="card-footer">
             <p id="status-message"></p>
